Tue Mar 29 13:31:00 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Cleaned up some comments.

Tue Mar 29 13:24:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Removing data for idempotent
	  titlecasing.

	* enc/unicode.c: Adjust code to data removal.

Tue Mar 29 12:45:18 2016  Laurent Arnoud  <laurent@spkdev.net>

	* lib/webrick/httpresponse.rb: Move error_body to method. It allow to
	  override the body more easily. [fix GH-1307]
	* test/webrick/test_httpresponse.rb: ditto.

Tue Mar 29 06:40:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_compile_err_append): rb_thread_t::base_block is no
	  longer used.

	* iseq.c (rb_iseq_compile_with_option): ditto, no protection is
	  needed.

Tue Mar 29 06:39:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (struct parser_params): move parse_in_eval flag from
	  rb_thread_t.

	* parse.y (rb_parser_set_context): set parsing context, not only
	  mild error flag.

	* iseq.c (rb_iseq_compile_with_option): the parser now refers no
	  thread local states to be restored.

	* vm_eval.c (eval_string_with_cref): ditto.

Mon Mar 28 21:24:02 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* numeric.c (int_pos_p): fix typos.

Mon Mar 28 14:54:49 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Refactoring in preparation for data reduction for
	  titlecase.

Mon Mar 28 14:36:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Minor refactoring for I WITH DOT ABOVE.

Mon Mar 28 14:26:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Removed code now covered by data from table.

Mon Mar 28 11:49:21 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Adding comments. [ci skip]

Mon Mar 28 11:30:23 2016  Shinichi Maeshima  <netwillnet@gmail.com>

	* lib/rubygems.rb: Fix `Gem.find_spec_for_exe` picks oldest gem.
	  https://github.com/travis-ci/travis-ci/issues/5798