@@ -750,12 +750,17 @@ onigenc_unicode_case_map(OnigCaseFoldType* flagP,
 		}
 	    }
 	    else if ((folded = onigenc_unicode_unfold1_lookup(code)) != 0) {  /* data about character found in CaseUnfold_11_Table */
-		if (flags&OnigCaseFoldFlags(folded->n)) {
-		    int count = OnigCodePointCount(folded->n);
-		    const OnigCodePoint *next = folded->code;
+		if (flags&OnigCaseFoldFlags(folded->n)) { /* needs and data availability match */
 		    MODIFIED;
-		    if (count==1)
-		        code = *next;
+		    if (flags&OnigCaseFoldFlags(folded->n)&ONIGENC_CASE_TITLECASE)
+		        code = folded->code[1];
+		    else
+			code = folded->code[0];
+		}
+		else if ((flags&(ONIGENC_CASE_UPCASE))
+			 && (code==0x03B9||code==0x03BC)) { /* GREEK SMALL LETTERs IOTA/MU */
+		    MODIFIED;
+		    code = folded->code[1];
 		}
 	    }
 	}
