@@ -3298,9 +3298,9 @@ static const CaseUnfold_11_Type CaseUnfold_11_Table[] = {
   {0x01b9, {1|U, {0x01b8}}},
   {0x01bd, {1|U, {0x01bc}}},
   {0x01bf, {1|U, {0x01f7}}},
-  {0x01c6, {2|U|ST|I(347), {0x01c4, 0x01c5}}},
-  {0x01c9, {2|U|ST|I(348), {0x01c7, 0x01c8}}},
-  {0x01cc, {2|U|ST|I(349), {0x01ca, 0x01cb}}},
+  {0x01c6, {2|U|ST, {0x01c4, 0x01c5}}},
+  {0x01c9, {2|U|ST, {0x01c7, 0x01c8}}},
+  {0x01cc, {2|U|ST, {0x01ca, 0x01cb}}},
   {0x01ce, {1|U, {0x01cd}}},
   {0x01d0, {1|U, {0x01cf}}},
   {0x01d2, {1|U, {0x01d1}}},
@@ -3319,7 +3319,7 @@ static const CaseUnfold_11_Type CaseUnfold_11_Table[] = {
   {0x01eb, {1|U, {0x01ea}}},
   {0x01ed, {1|U, {0x01ec}}},
   {0x01ef, {1|U, {0x01ee}}},
-  {0x01f3, {2|U|ST|I(350), {0x01f1, 0x01f2}}},
+  {0x01f3, {2|U|ST, {0x01f1, 0x01f2}}},
   {0x01f5, {1|U, {0x01f4}}},
   {0x01f9, {1|U, {0x01f8}}},
   {0x01fb, {1|U, {0x01fa}}},
@@ -3412,10 +3412,10 @@ static const CaseUnfold_11_Type CaseUnfold_11_Table[] = {
   {0x03b6, {1|U, {0x0396}}},
   {0x03b7, {1|U, {0x0397}}},
   {0x03b8, {3|U, {0x0398, 0x03d1, 0x03f4}}},
-  {0x03b9, {3|SU|I(351), {0x0345, 0x0399, 0x1fbe}}},
+  {0x03b9, {3, {0x0345, 0x0399, 0x1fbe}}},
   {0x03ba, {2|U, {0x039a, 0x03f0}}},
   {0x03bb, {1|U, {0x039b}}},
-  {0x03bc, {2|SU|I(352), {0x00b5, 0x039c}}},
+  {0x03bc, {2, {0x00b5, 0x039c}}},
   {0x03bd, {1|U, {0x039d}}},
   {0x03be, {1|U, {0x039e}}},
   {0x03bf, {1|U, {0x039f}}},
@@ -6371,10 +6371,4 @@ OnigCodePoint CaseMappingSpecials[] = {
     L(2)|0x0544, 0x056B, L(2)|0x0544, 0x053B,
     L(2)|0x054E, 0x0576, L(2)|0x054E, 0x0546,
     L(2)|0x0544, 0x056D, L(2)|0x0544, 0x053D,
-    L(1)|0x01C5,
-    L(1)|0x01C8,
-    L(1)|0x01CB,
-    L(1)|0x01F2,
-    L(1)|0x0399,
-    L(1)|0x039C,
 };
